network-policies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-api-to-database","namespace":"trading-app"},"spec":{"egress":[{"ports":[{"port":5432,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"app":"postgres"}}}]},{"ports":[{"port":53,"protocol":"UDP"}],"to":[{"namespaceSelector":{},"podSelector":{"matchLabels":{"k8s-app":"kube-dns"}}}]}],"podSelector":{"matchLabels":{"app":"trading-api"}},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-02-08T12:30:41Z"
    generation: 1
    name: allow-api-to-database
    namespace: trading-app
    resourceVersion: "1770553841576271014"
    uid: fdd8084a-6a22-4cab-adba-3c8cd4571f40
  spec:
    egress:
    - ports:
      - port: 5432
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            app: postgres
    - ports:
      - port: 53
        protocol: UDP
      to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    podSelector:
      matchLabels:
        app: trading-api
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-dns-egress","namespace":"trading-app"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"UDP"}],"to":[{"namespaceSelector":{},"podSelector":{"matchLabels":{"k8s-app":"kube-dns"}}}]}],"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-02-08T12:49:09Z"
    generation: 1
    name: allow-dns-egress
    namespace: trading-app
    resourceVersion: "1770554949339119019"
    uid: 3be317a1-b7f7-4322-a0cc-bffd8f1cdf0b
  spec:
    egress:
    - ports:
      - port: 53
        protocol: UDP
      to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    podSelector: {}
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-frontend-to-api","namespace":"trading-app"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"frontend"}}}],"ports":[{"port":8080,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"trading-api"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-02-08T12:30:41Z"
    generation: 1
    name: allow-frontend-to-api
    namespace: trading-app
    resourceVersion: "1770553841033839016"
    uid: 8dd00ad4-9e57-4534-8864-a41f513a41f3
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
      - port: 8080
        protocol: TCP
    podSelector:
      matchLabels:
        app: trading-api
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-egress","namespace":"trading-app"},"spec":{"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-02-08T12:30:39Z"
    generation: 1
    name: default-deny-egress
    namespace: trading-app
    resourceVersion: "1770553839761695001"
    uid: 1cdb474d-3dc2-47df-8c02-dc8fe22911ea
  spec:
    podSelector: {}
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"trading-app"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-02-08T12:30:39Z"
    generation: 1
    name: default-deny-ingress
    namespace: trading-app
    resourceVersion: "1770553839231903022"
    uid: 79d522dd-fa9e-4167-9347-38917a5fc638
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
